k8s/apps/argocd/argocd/patch-argocd-server.yaml
---
apiVersion: apps/v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: LoadBalancer
